[FIX] Bigger touchable area on mobile

--- a/src/components/SelectBox/SelectBox.css
+++ b/src/components/SelectBox/SelectBox.css
@@ -35,7 +35,7 @@
 }
 
 .react-autosuggest__input {
-  @apply py-1 px-3 w-full items-start appearance-none;
+  @apply py-2 px-3 w-full items-start appearance-none;
   font-weight: 400;
   font-size: 16px;
   background: #ffffff;
@@ -94,7 +94,7 @@
 
 .react-autosuggest__suggestion {
   font-weight: 400;
-  @apply py-1 px-3 cursor-pointer flex flex-row items-center;
+  @apply py-2 px-3 cursor-pointer flex flex-row items-center;
 }
 
 .react-autosuggest__suggestion--highlighted {
